# scavenger-services

./: .gitignore  openapi_image_service.yaml
image-service-0.1/: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  openapi.yaml  pyproject.toml  pytest.ini  setup.cfg
image-service-0.1/.openapi-generator/: FILES
image-service-0.1/src/image_service/: main.py  security_api.py
image-service-0.1/src/image_service/apis/: core_api.py  diagnostic_api.py
image-service-0.1/src/image_service/core/: connections.py  logging.py  settings.py
image-service-0.1/src/image_service/lib/: redis.py  storage.py  transform.py
image-service-0.1/src/image_service/models/: error.py  extra_models.py  upload_image201_response.py
image-service-0.1/src/image_service/models/cache/: base.py  image.py
image-service-0.1/tests/: conftest.py  test_core_api.py  test_diagnostic_api.py  test_lib.py
instagram-sync/: README.rst  pyproject.toml
instagram-sync/src/instagram_sync/: make_migrations.py  migration_settings.py
instagram-sync/src/instagram_sync/contrib/django/: admin.py  apps.py  models.py
instagram-sync/src/instagram_sync/contrib/django/migrations/: 0001_initial.py
instagram-sync/src/instagram_sync/contrib/django/templates/instagram_sync/: add_form.html  dynamic_fieldsets.html
instagram-sync/src/instagram_sync/core/: settings.py
instagram-sync/src/instagram_sync/core/graph_api/: auth.py  instagram.py  pages.py
instagram-sync/tests/: test_instagram_sync.py
