#[build-system]
#requires = ["setuptools", "wheel"]
#build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
skip = [
    '.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.tox',
    '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', 'venv',
]
skip_gitignore = true

[tool.poetry]
name = "image-service"
version = "0.1"
description = ""
authors = ["MJ Hardin <mhardinla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
python-multipart = "^0.0.5"
boto3 = "^1.24.26"
Pillow = "^9.2.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
ipdb = "^0.13.9"
pytest = "^7.1.2"
moto = "^3.1.16"
poetry-dotenv-plugin = "^0.1.0-alpha.2"
pytest-asyncio = "^0.19.0"
python-dotenv = "^0.20.0"
pytest-dotenv = "^0.5.2"
pre-commit = "^2.20.0"
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^4.0.1"

[tool.poetry.scripts]
server = "image_service.main:run_server"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
